# mesh-to-point

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
assets/: cameras.json  lights.json  suzanne.glb  views.json
mesh-to-point/: camera.py  main.py  multiview.py  render_mesh.py  render_mesh_2.py  utils.py
mesh_to_point/: __init__.py  camera.py  lights.py  main.py  multiview.py  render.sh  render_mesh.py  utils.py
mesh_to_point/io/: data.py
mesh_to_point/pointcloud/: __init__.py  misc.py  multiview.py
mesh_to_point/render/: __init__.py  compositor.py  config.py  io.py  render.py  scene.py
tests/: test_cli.py  test_pointcloud.py  test_rendering.py
tests/assets/: single_view.json
tests/assets/reference_output/: pointcloud.npy  transforms.json
tests/assets/reference_output/images/: 0000_depth.exr  0001_depth.exr  0002_depth.exr  0003_depth.exr  0004_depth.exr  0005_depth.exr  0006_depth.exr  0007_depth.exr  0008_depth.exr  0009_depth.exr  0010_depth.exr  0011_depth.exr  0012_depth.exr  0013_depth.exr  0014_depth.exr  0015_depth.exr  0016_depth.exr  0017_depth.exr  0018_depth.exr  0019_depth.exr  0020_depth.exr  0021_depth.exr  0022_depth.exr  0023_depth.exr  0024_depth.exr  0025_depth.exr  0026_depth.exr  0027_depth.exr  0028_depth.exr  0029_depth.exr
