[project]
name = "mesh-to-point"
version = "0.1.0"
description = "RGB point-cloud generation from meshes."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "numpy",
    "scipy",
    "click",
    "bpy",
    "mathutils>=5.1.0",
    "openexr>=3.4.12",
    "pillow>=12.2.0",
    "scikit-learn>=1.9.0",
    "plotly>=6.8.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "pytest",
]

[tool.setuptools]
packages = ["mesh_to_point"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
