[project]
dynamic = ["version"]
name = "mesh-to-point"
description = "RGB point-cloud generation from meshes."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "numpy",
    "scipy",
    "click",
    "bpy",
    "mathutils>=5.1.0",
    "openexr>=3.4.12",
    "pillow>=12.2.0",
    "scikit-learn>=1.9.0",
    "plotly>=6.8.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]

[tool.setuptools]
packages = ["mesh_to_point"]

[project.scripts]
mesh-to-point = "mesh_to_point.main:main"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
